# CADRays

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
CMake/: DefineCxxFlags.cmake  DefineMacro.cmake  FindFFMPEG.cmake  FindFreeImage.cmake  FindFreeType.cmake  FindGLFW.cmake  FindOCCT.cmake  FindTBB.cmake  FindTCL.cmake  FindWindowsSDK.cmake  Findassimp.cmake  VStudio.vcxproj.user.in  macros.cmake  sign.bat.in
data/: DrawPlugin  DrawPlugin1  DrawPlugin2  DrawPlugin3  DrawPlugin4  DrawPlugin5
data/fonts/: LICENSE.txt
data/other/: LICENSE.html  preview.tcl
data/scripts/: Bottle.tcl  CornellBox.tcl  Cpu.tcl  Cutter.tcl  Drill.tcl  Materials.tcl  Shape.tcl
src/ImGui/: CMakeLists.txt  ImColorPicker.cxx  ImColorPicker.h  ImGuizmo.cxx  ImGuizmo.h  ImRaytraceControls.cxx  ImRaytraceControls.h  imconfig.h  imgui.cxx  imgui.h  imgui_dock.h  imgui_dock.inl  imgui_draw.cxx  imgui_internal.h  imgui_user.h  imgui_user.inl
src/ImportExport/: AisMesh.cxx  AisMesh.hxx  CMakeLists.txt  DataContext.cxx  DataContext.hxx  DataModel.cxx  DataModel.hxx  DataNode.cxx  DataNode.hxx  ImportExport.cxx  ImportExport.hxx  ImportExportPlugin.cxx  ImportExportPlugin.hxx  MeshImporter.cxx  MeshImporter.hxx  TextureManager.cxx  TextureManager.hxx  Utils.cxx  Utils.hxx
src/Launcher/: AppConsole.cxx  AppConsole.hxx  AppGui.cxx  AppGui.hxx  AppViewer.cxx  AppViewer.hxx  CADRays.rc  CMakeLists.txt  CustomWindow.cxx  CustomWindow.hxx  DataModelWidget.cxx  DataModelWidget.hxx  FlightControls.cxx  FlightControls.h  GuiBase.cxx  GuiBase.hxx  GuiPanel.cxx  GuiPanel.hxx  ImportSettingsEditor.cxx  ImportSettingsEditor.hxx  LightSourcesEditor.cxx  LightSourcesEditor.hxx  MaterialEditor.cxx  MaterialEditor.hxx  OcctLogoPng.c  OrbitControls.cxx  OrbitControls.h  ScriptEditor.cxx  ScriptEditor.hxx  SettingsWidget.cxx  SettingsWidget.hxx  TransformWidget.cxx  TransformWidget.hxx  Version.hxx  ViewControls.h  gl3w.h  imgui_impl_glfw_gl3.cxx  imgui_impl_glfw_gl3.h  main.cxx  tinyfiledialogs.c  (+1 more)
src/Launcher/stb/: stb_image.h
src/Utils/: CMakeLists.txt  Settings.cxx  Settings.hxx
testing/: CADRays_Testing.py  Pillow-4.1.1-py2.7-win32.egg  readme.txt
